style: Reduce code width

--- a/passnyc.ipynb
+++ b/passnyc.ipynb
@@ -22541,7 +22541,13 @@
     }
    ],
    "source": [
-    "plot_scatter_stats(schools, 'percent_white', 'school_income_estimate', 'Proportion of White Students', 'School Income')"
+    "plot_scatter_stats(\n",
+    "    schools,\n",
+    "    'percent_white',\n",
+    "    'school_income_estimate',\n",
+    "    'Proportion of White Students',\n",
+    "    'School Income'\n",
+    ")"
    ]
   },
   {
@@ -22730,7 +22736,13 @@
     }
    ],
    "source": [
-    "plot_scatter_stats(schools, 'school_income_estimate', 'student_attendance_rate', 'School Income', 'Student Attendance Rate')"
+    "plot_scatter_stats(\n",
+    "    schools,\n",
+    "    'school_income_estimate',\n",
+    "    'student_attendance_rate',\n",
+    "    'School Income',\n",
+    "    'Student Attendance Rate'\n",
+    ")"
    ]
   },
   {
@@ -33003,7 +33015,8 @@
     "\n",
     "for col in opportunities_col:\n",
     "    if col == 'academicopportunities1':\n",
-    "        opportunities_college = final_df[col].str.contains(r'[Cc]ollege') | final_df[col].str.contains(r'[Uu]niversity')\n",
+    "        opportunities_college = final_df[col].str.contains(r'[Cc]ollege') | \\\n",
+    "                                final_df[col].str.contains(r'[Uu]niversity')\n",
     "    else:\n",
     "        col_result = final_df[col].str.contains(r'[Cc]ollege') | final_df[col].str.contains(r'[Uu]niversity')\n",
     "        # return True if any of the academicopportunities columns have something about college or university\n",
