docs: Update docstrings

--- a/passnyc.ipynb
+++ b/passnyc.ipynb
@@ -8333,6 +8333,9 @@
     "    bin_size (float) - histogram bin size\n",
     "    benchmark (str) - name of the variable\n",
     "    \n",
+    "    OUTPUT:\n",
+    "    None\n",
+    "    \n",
     "    Plot a histogram for the distribution of a benchmark score.\n",
     "    '''\n",
     "    \n",
@@ -22380,6 +22383,9 @@
     "    xvar_name (str) - name of the x-variable\n",
     "    yvar_name (str) - name of the y-variable\n",
     "    \n",
+    "    OUTPUT:\n",
+    "    None\n",
+    "    \n",
     "    Create a scatter plot of two variables and show the Pearson correlation coefficient.\n",
     "    '''\n",
     "    \n",
@@ -22777,6 +22783,9 @@
     "    '''\n",
     "    INPUT:\n",
     "    subject (str) - subject to plot proportion of 4s by grade, either 'ELA' or 'Math'\n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    None\n",
     "    \n",
     "    Create heatmaps that show the proportion of 4s in a subject by grade and district.\n",
     "    '''\n",
@@ -33060,7 +33069,7 @@
     "def calculate_time_interval(time_tuple):\n",
     "    '''\n",
     "    INPUT:\n",
-    "    time_tuple (list) - tuple of start and end times\n",
+    "    time_tuple (tuple) - tuple of start and end times\n",
     "    OUTPUT:\n",
     "    minutes (float) - the number of minutes in between the start and end times\n",
     "    \n",
@@ -33100,6 +33109,9 @@
     "                     by grade and demographic, on standardized tests\n",
     "    grade (int) - grade for which to calculate proportions\n",
     "    subject (str) - subject for which to calculate proportions, either 'ela' or 'math'\n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    None\n",
     "    \n",
     "    Calculate the proportion of students who received 4s on standardized tests \n",
     "    and proportion of each demographic that achieved those 4s.\n",
@@ -33182,11 +33194,11 @@
    "source": [
     "def to_1D(series):\n",
     "    '''\n",
-    "    INPUT\n",
-    "    series - Pandas series with lists\n",
+    "    INPUT:\n",
+    "    series (Series) - Pandas series with lists\n",
     "    \n",
-    "    OUTPUT\n",
-    "    all_values - Pandas series with every value from every list in the original series\n",
+    "    OUTPUT:\n",
+    "    all_values (Series) - Pandas series with every value from every list in the original series\n",
     "    \n",
     "    Converts a Pandas series with lists into a single Pandas series with every value.\n",
     "    '''\n",
@@ -34504,6 +34516,9 @@
     "    df (DataFrame) - DataFrame containing columns with lists\n",
     "    col (str) - name of column with lists\n",
     "    values (list) - list of values for which to create boolean columns\n",
+    "    \n",
+    "    OUTPUT:\n",
+    "    None\n",
     "    \n",
     "    Create columns to indicate whether a column's lists have given values.\n",
     "    '''\n",
