style: Make plt.hist consistent

--- a/passnyc.ipynb
+++ b/passnyc.ipynb
@@ -23463,7 +23463,7 @@
     "bin_size = 0.025\n",
     "bins = np.arange(0, shsat['percentage_of_black_hispanic_students'].max()+bin_size, bin_size)\n",
     "plt.figure(figsize=[8, 6])\n",
-    "plt.hist(shsat['percentage_of_black_hispanic_students'], bins=bins)\n",
+    "plt.hist(data=shsat, x='percentage_of_black_hispanic_students', bins=bins)\n",
     "plt.xticks(xticks, xtick_labels)\n",
     "plt.title('Distribution of Percentage of Black/Hispanic Students')\n",
     "plt.xlabel('Percentage of Black/Hispanic Students')\n",
